Rewrote all command classes for better code readability