@@ -1,7 +1,9 @@
 package de.cuzim1tigaaa.spectator.commands;
 
 import de.cuzim1tigaaa.spectator.Spectator;
-import de.cuzim1tigaaa.spectator.files.*;
+import de.cuzim1tigaaa.spectator.files.Messages;
+import de.cuzim1tigaaa.spectator.files.Paths;
+import de.cuzim1tigaaa.spectator.spectate.SpectateUtils;
 import org.bukkit.Bukkit;
 import org.bukkit.command.*;
 import org.bukkit.entity.Player;
@@ -9,46 +11,54 @@ import org.bukkit.entity.Player;
 import javax.annotation.Nonnull;
 import java.util.*;
 
+import static de.cuzim1tigaaa.spectator.files.Permissions.COMMAND_UNSPECTATE;
+import static de.cuzim1tigaaa.spectator.files.Permissions.hasPermission;
+
 public class UnSpectate implements CommandExecutor, TabCompleter {
 
     private final Spectator plugin;
+    private final SpectateUtils spectateUtils;
 
     public UnSpectate(Spectator plugin) {
         Objects.requireNonNull(plugin.getCommand("unspectate")).setExecutor(this);
         this.plugin = plugin;
+        this.spectateUtils = plugin.getSpectateUtils();
     }
 
     @Override
     public boolean onCommand(@Nonnull CommandSender sender, @Nonnull Command command, @Nonnull String label, @Nonnull String[] args) {
-        if(!sender.hasPermission(Permissions.COMMAND_UNSPECTATE)) {
+        if(!hasPermission(sender, COMMAND_UNSPECTATE)) {
             sender.sendMessage(Messages.getMessage(Paths.MESSAGE_DEFAULT_PERMISSION));
             return true;
         }
-        if(args.length < 1) {
-            if(this.plugin.getSpectators().size() <= 0) {
+
+        if(args.length == 0) {
+            if(spectateUtils.getSpectators().isEmpty()) {
                 sender.sendMessage(Messages.getMessage(Paths.MESSAGES_COMMANDS_LIST_NONE));
                 return true;
             }
-            this.plugin.getSpectateManager().restoreAll();
-            for(Player player : this.plugin.getSpectators())
-                if(!player.equals(sender))
-                    player.sendMessage(Messages.getMessage(Paths.MESSAGES_COMMANDS_SPECTATE_LEAVE_OWN));
+
+            for(Player spectator : spectateUtils.getSpectators()) {
+                if(spectator.equals(sender)) continue;
+                spectator.sendMessage(Messages.getMessage(Paths.MESSAGES_COMMANDS_SPECTATE_LEAVE_OWN));
+            }
+
+            // TODO plugin.getSpectateManager().restoreAll();
             sender.sendMessage(Messages.getMessage(Paths.MESSAGES_COMMANDS_UNSPECTATE_ALL));
             return true;
         }
         Player target = Bukkit.getPlayer(args[0]);
-        if(target == null) {
+        if(target == null || !target.isOnline()) {
             sender.sendMessage(Messages.getMessage(Paths.MESSAGES_GENERAL_OFFLINEPLAYER, "TARGET", args[0]));
             return true;
         }
-        if(!this.plugin.getSpectators().contains(target)) {
+
+        if(!spectateUtils.isSpectator(target)) {
             sender.sendMessage(Messages.getMessage(Paths.MESSAGES_GENERAL_NOTSPECTATING, "TARGET", target.getDisplayName()));
             return true;
         }
-        boolean useCurrentLocation = false;
-        if(args.length > 1) useCurrentLocation = Boolean.parseBoolean(args[1]);
 
-        this.plugin.getSpectateManager().unSpectate(target, useCurrentLocation);
+        spectateUtils.Unspectate(target, !(args.length > 1 && Boolean.parseBoolean(args[1])));
         target.sendMessage(Messages.getMessage(Paths.MESSAGES_COMMANDS_SPECTATE_LEAVE_OWN));
         sender.sendMessage(Messages.getMessage(Paths.MESSAGES_COMMANDS_UNSPECTATE_PLAYER, "TARGET", target.getDisplayName()));
         return true;
@@ -56,10 +66,10 @@ public class UnSpectate implements CommandExecutor, TabCompleter {
 
     @Override
     public List<String> onTabComplete(@Nonnull CommandSender sender, @Nonnull Command command, @Nonnull String s, @Nonnull String[] args) {
-        if(args.length == 1)
-            return plugin.getOnlinePlayerNames();
-        if(args.length == 2)
-            return List.of("true", "false");
-        return Collections.emptyList();
+        return switch(args.length) {
+            case 1 -> plugin.getOnlinePlayerNames();
+            case 2 -> List.of("true", "false");
+            default -> Collections.emptyList();
+        };
     }
 }
